[gd_scene load_steps=5 format=3 uid="uid://ti7khvqpbf3m"]

[ext_resource type="Script" path="res://src/BoidArea2D.gd" id="1_tbwia"]
[ext_resource type="Texture2D" uid="uid://cfjuk733gj358" path="res://image/TitleScreen/Leaf_Icon.png" id="2_um8yy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6k0en"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5pica"]
size = Vector2(52, 32.5)

[node name="BoidArea2D" type="Area2D" groups=["boid"]]
position = Vector2(-500, -500)
script = ExtResource("1_tbwia")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6k0en")

[node name="VisionArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea2D"]
position = Vector2(8, -3.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_5pica")

[node name="rayFolder" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="rayFolder"]
target_position = Vector2(16, -36)

[node name="RayCast2D2" type="RayCast2D" parent="rayFolder"]
target_position = Vector2(49, -12)

[node name="RayCast2D3" type="RayCast2D" parent="rayFolder"]
target_position = Vector2(42, 5)

[node name="RayCast2D4" type="RayCast2D" parent="rayFolder"]
target_position = Vector2(16, 27)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.14319
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_um8yy")

[connection signal="area_entered" from="VisionArea2D" to="." method="_on_vision_area_2d_area_entered"]
[connection signal="area_exited" from="VisionArea2D" to="." method="_on_vision_area_2d_area_exited"]
